test/cpls/errors/if-args-number.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "if",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "VALUE",
      "value": 1,
      "offset": 3,
      "line": 1,
      "column": 4
    }
  ]
}